--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
         <title>🔥☎️✨</title>
         <style>
             ul {
-                padding: 20px;
-                background-color: #FCADC3;
+                background-color: #fcadc3;
                 display: inline-block;
                 margin: 0;
+                padding: 20px;
             }
             li {
-                line-height: 1.15;
-                font-weight: 700;
-                text-transform: uppercase;
-                font-family: "Helvetica Neue";
-                font-style: italic;
-                letter-spacing: 1px;
-                font-size: 65px;
                 color: #fff;
+                font-family: "Helvetica Neue";
+                font-size: 65px;
+                font-style: italic;
+                font-weight: 700;
+                letter-spacing: 1px;
+                line-height: 1.15;
+                text-transform: uppercase;
             }
             input {
                 display: block;
