--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <li>1-800-hotlinebling</li>
             <li>1-800-hotlinebling</li>
             <li>1-800-hotlinebling</li>
-            <li>1-800-hotlinebling</li> <li>1-800-hotlinebling</li>
+            <li>1-800-hotlinebling</li>
+            <li>1-800-hotlinebling</li>
             <li>1-800-hotlinebling</li>
             <li>1-800-hotlinebling</li>
             <li>1-800-hotlinebling</li>
